test: test ElasticsearchConfig